--- a/shop/package.json
+++ b/shop/package.json
@@ -2,7 +2,6 @@
   "name": "shop",
   "version": "0.1.0",
   "private": true,
-  "homepage": "amarans.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -13,8 +12,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
@@ -41,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "./"
 }
