--- a/shop/package.json
+++ b/shop/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "/react",
   "name": "shop",
   "version": "0.1.0",
   "private": true,
@@ -43,6 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "./"
+  }
+  
 }
